rustfs/rustfs.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rustfs
  namespace: rustfs
spec:
  podManagementPolicy: Parallel
  replicas: 4
  serviceName: rustfs-headless
  selector:
    matchLabels:
      app: rustfs
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rustfs
    spec:
      terminationGracePeriodSeconds: 120
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: rustfs
        image: rustfs/rustfs:latest
        imagePullPolicy: Always
        command:
        - /bin/sh
        - -c
        - exec /usr/bin/rustfs ${RUSTFS_VOLUMES}
        ports:
        - containerPort: 9000
          name: container-port
        livenessProbe:
          httpGet:
            path: /health
            port: container-port
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: container-port
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: local-storage
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 512Gi
      selector:
        matchLabels:
          type: rustfs-data
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs
  namespace: rustfs
spec:
  selector:
    app: rustfs
  ports:
  - name: api
    port: 80
    targetPort: container-port
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: rustfs-headless
  namespace: rustfs
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: rustfs
